--- a/RC-car-mobile-app/package.json
+++ b/RC-car-mobile-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "243_s2024_gran_turismo_app",
+  "name": "rc-car-mobile-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,19 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-maps": "1.10.0",
-    "react-native-web": "~0.19.6"
+    "react-native-maps": "^1.10.0",
+    "react-native-webview": "^13.6.4",
+    "typescript": "^5.3.0",
+    "@types/react": "~18.2.45",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
