--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
     "expo": "^49.0.23",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
     "react-native-maps": "1.10.0",
-    "react-native-web": "~0.19.6",
-    "expo-splash-screen": "~0.20.5"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-base64": "^0.2.2",
     "typescript": "^5.1.3"
   },
   "private": true
