--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
+    "@react-native-community/geolocation": "^3.2.1",
     "expo": "^49.0.23",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~~1.6.0",
@@ -17,7 +18,7 @@
     "react-native": "0.72.10",
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
-    "react-native-maps": "1.10.0",
+    "react-native-maps": "^1.10.0",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
