--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-base64": "^0.2.1",
     "react-native-ble-plx": "^3.1.2",
     "react-native-maps": "^1.10.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-location": "~16.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
